gke/manifests/collector.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
spec:
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: collector
        image: collector
        ports:
        - containerPort: 4317
        - containerPort: 4318
        - containerPort: 13133
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 500Mi
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 60
          httpGet:
            path: "/"
            port: 13133
        livenessProbe:
          httpGet:
            path: "/"
            port: 13133

---
apiVersion: v1
kind: Service
metadata:
  name: collector
spec:
  type: ClusterIP
  selector:
    app: collector
  ports:
  - name: grpc
    port: 4317
    targetPort: 4317
    protocol: TCP
  - name: http
    port: 4318
    targetPort: 4318
    protocol: TCP
