gke/manifests/forwarder.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forwarder
spec:
  selector:
    matchLabels:
      app: forwarder
  template:
    metadata:
      labels:
        app: forwarder
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: forwarder
        image: forwarder
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 400Mi
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 60
          httpGet:
            path: "/healthz"
            port: 8080
        livenessProbe:
          httpGet:
            path: "/healthz"
            port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: forwarder
spec:
  type: ClusterIP
  selector:
    app: forwarder
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
